[gd_scene load_steps=7 format=4 uid="uid://cfjp23jay1xyw"]

[ext_resource type="Script" path="res://scenes/settings_menu.gd" id="1_g011e"]
[ext_resource type="TileSet" uid="uid://b35s45rp0yrck" path="res://scenes/menu_tile_set.tres" id="1_g236m"]
[ext_resource type="FontFile" uid="uid://bckbkknmti08k" path="res://assets/fonts/m6x11.ttf" id="2_ityvj"]
[ext_resource type="Theme" uid="uid://fqhlidlvqsyl" path="res://assets/fonts/menu_buttons.tres" id="4_558x5"]

[sub_resource type="LabelSettings" id="LabelSettings_3h1cu"]
font = ExtResource("2_ityvj")
font_size = 96
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ucw1g"]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_g011e")

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAMAAAABAAAAAAAAAAMAAAACAAAAAAAAAAMAAAADAAAAAAAAAAMAAAAEAAAAAAAAAAMAAAAFAAAAAAAAAAMAAAAGAAAAAAAAAAMAAAAHAAAAAAAAAAMAAAAIAAAAAAAAAAMAAAAJAAAAAAAAAAMAAAAKAAAAAAAAAAMAAAALAAAAAAAAAAMAAAAMAAAAAAAAAAMAAAANAAAAAAAAAAMAAAAOAAAAAAAAAAMAAAAPAAAAAAAAAAMAAAAQAAAAAAAAAAMAAAARAAAAAAAAAAMAAAASAAAAAAAAAAMAAAATAAAAAAAAAAMAAAAUAAAAAAAAAAMAAAAVAAAAAAAAAAMAAAAWAAAAAAAAAAMAAAAXAAAAAAAAAAMAAAAYAAAAAAAAAAMAAAAZAAAAAAAAAAMAAAAaAAAAAAAAAAMAAAAbAAAAAAAAAAMAAAAcAAAAAAAAAAMAAAAdAAAAAAAAAAMAAAAeAAAAAAAAAAMAAAAfAAAAAAAAAAMAAAAgAAAAAAAAAAMAAAAhAAAAAAAAAAMAAAAiAAAAAAAAAAMAAAAjAAAAAAAAAAMAAAAjABQAAAAAAAMAAAAAABQAAAAAAAMAAAAiABQAAAAAAAMAAAAhABQAAAAAAAMAAAAgABQAAAAAAAMAAAAfABQAAAAAAAMAAAAeABQAAAAAAAMAAAAdABQAAAAAAAMAAAAcABQAAAAAAAMAAAAbABQAAAAAAAMAAAAaABQAAAAAAAMAAAAZABQAAAAAAAMAAAAYABQAAAAAAAMAAAAXABQAAAAAAAMAAAAWABQAAAAAAAMAAAAVABQAAAAAAAMAAAAUABQAAAAAAAMAAAATABQAAAAAAAMAAAASABQAAAAAAAMAAAARABQAAAAAAAMAAAAQABQAAAAAAAMAAAAPABQAAAAAAAMAAAAOABQAAAAAAAMAAAANABQAAAAAAAMAAAAMABQAAAAAAAMAAAALABQAAAAAAAMAAAAKABQAAAAAAAMAAAAJABQAAAAAAAMAAAAIABQAAAAAAAMAAAAHABQAAAAAAAMAAAAGABQAAAAAAAMAAAAFABQAAAAAAAMAAAAEABQAAAAAAAMAAAADABQAAAAAAAMAAAACABQAAAAAAAMAAAABABQAAAAAAAMAAAAAAAEAAAAAAAMAAAAAAAIAAAAAAAMAAAAAAAMAAAAAAAMAAAAAAAQAAAAAAAMAAAAAAAUAAAAAAAMAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAMAAAAAAAgAAAAAAAMAAAAAAAkAAAAAAAMAAAAAAAoAAAAAAAMAAAAAAAsAAAAAAAMAAAAAAAwAAAAAAAMAAAAAAA0AAAAAAAMAAAAAAA4AAAAAAAMAAAAAAA8AAAAAAAMAAAAAABAAAAAAAAMAAAAAABEAAAAAAAMAAAAAABIAAAAAAAMAAAAAABMAAAAAAAMAAAAjAAEAAAAAAAMAAAAjAAIAAAAAAAMAAAAjAAMAAAAAAAMAAAAjAAQAAAAAAAMAAAAjAAUAAAAAAAMAAAAjAAYAAAAAAAMAAAAjAAcAAAAAAAMAAAAjAAgAAAAAAAMAAAAjAAkAAAAAAAMAAAAjAAoAAAAAAAMAAAAjAAsAAAAAAAMAAAAjAAwAAAAAAAMAAAAjAA0AAAAAAAMAAAAjAA4AAAAAAAMAAAAjAA8AAAAAAAMAAAAjABAAAAAAAAMAAAAjABEAAAAAAAMAAAAjABIAAAAAAAMAAAAjABMAAAAAAAMAAAAMAAwAAAAAAAMAAAAMAAsAAAAAAAMAAAAMAAoAAAAAAAMAAAAMAAkAAAAAAAMAAAAMAAgAAAAAAAMAAAAMAAcAAAAAAAMAAAAMAAYAAAAAAAMAAAAMAAUAAAAAAAMAAAAMAAQAAAAAAAMAAAAMAAMAAAAAAAMAAAAMAAIAAAAAAAMAAAAMAAEAAAAAAAMAAAALAAEAAAAAAAMAAAAKAAEAAAAAAAMAAAAJAAEAAAAAAAMAAAAIAAEAAAAAAAMAAAAHAAEAAAAAAAMAAAAGAAEAAAAAAAMAAAAFAAEAAAAAAAMAAAAEAAEAAAAAAAMAAAADAAEAAAAAAAMAAAACAAEAAAAAAAMAAAABAAEAAAAAAAMAAAABAAIAAAAAAAMAAAABAAMAAAAAAAMAAAABAAQAAAAAAAMAAAABAAUAAAAAAAMAAAABAAYAAAAAAAMAAAABAAcAAAAAAAMAAAABAAgAAAAAAAMAAAABAAkAAAAAAAMAAAABAAoAAAAAAAMAAAABAAsAAAAAAAMAAAABAAwAAAAAAAMAAAABAA0AAAAAAAMAAAABAA4AAAAAAAMAAAABAA8AAAAAAAMAAAABABAAAAAAAAMAAAABABEAAAAAAAMAAAABABIAAAAAAAMAAAABABMAAAAAAAMAAAACABMAAAAAAAMAAAACABIAAAAAAAMAAAACABEAAAAAAAMAAAACABAAAAAAAAMAAAACAA8AAAAAAAMAAAACAA4AAAAAAAMAAAACAA0AAAAAAAMAAAACAAwAAAAAAAMAAAACAAsAAAAAAAMAAAACAAoAAAAAAAMAAAACAAkAAAAAAAMAAAACAAgAAAAAAAMAAAACAAcAAAAAAAMAAAACAAYAAAAAAAMAAAACAAUAAAAAAAMAAAACAAQAAAAAAAMAAAACAAMAAAAAAAMAAAACAAIAAAAAAAMAAAADAAIAAAAAAAMAAAADAAMAAAAAAAMAAAADAAQAAAAAAAMAAAADAAUAAAAAAAMAAAADAAYAAAAAAAMAAAADAAcAAAAAAAMAAAADAAgAAAAAAAMAAAADAAkAAAAAAAMAAAADAAoAAAAAAAMAAAADAAsAAAAAAAMAAAADAAwAAAAAAAMAAAADAA0AAAAAAAMAAAADAA4AAAAAAAMAAAADAA8AAAAAAAMAAAADABAAAAAAAAMAAAADABEAAAAAAAMAAAADABIAAAAAAAMAAAADABMAAAAAAAMAAAAEABMAAAAAAAMAAAAEABIAAAAAAAMAAAAEABEAAAAAAAMAAAAEABAAAAAAAAMAAAAEAA8AAAAAAAMAAAAEAA4AAAAAAAMAAAAEAA0AAAAAAAMAAAAEAAwAAAAAAAMAAAAEAAsAAAAAAAMAAAAEAAoAAAAAAAMAAAAEAAkAAAAAAAMAAAAEAAgAAAAAAAMAAAAEAAcAAAAAAAMAAAAEAAYAAAAAAAMAAAAEAAUAAAAAAAMAAAAEAAQAAAAAAAMAAAAEAAMAAAAAAAMAAAAEAAIAAAAAAAMAAAAFAAIAAAAAAAMAAAAFAAMAAAAAAAMAAAAFAAQAAAAAAAMAAAAFAAUAAAAAAAMAAAAFAAYAAAAAAAMAAAAFAAcAAAAAAAMAAAAFAAgAAAAAAAMAAAAFAAkAAAAAAAMAAAAFAAoAAAAAAAMAAAAFAAsAAAAAAAMAAAAFAAwAAAAAAAMAAAAFAA0AAAAAAAMAAAAFAA4AAAAAAAMAAAAFAA8AAAAAAAMAAAAFABAAAAAAAAMAAAAFABEAAAAAAAMAAAAFABIAAAAAAAMAAAAFABMAAAAAAAMAAAAGABMAAAAAAAMAAAAGABIAAAAAAAMAAAAGABEAAAAAAAMAAAAGABAAAAAAAAMAAAAGAA8AAAAAAAMAAAAGAA4AAAAAAAMAAAAGAA0AAAAAAAMAAAAGAAwAAAAAAAMAAAAGAAsAAAAAAAMAAAAGAAoAAAAAAAMAAAAGAAkAAAAAAAMAAAAGAAgAAAAAAAMAAAAGAAcAAAAAAAMAAAAGAAYAAAAAAAMAAAAGAAUAAAAAAAMAAAAGAAQAAAAAAAMAAAAGAAMAAAAAAAMAAAAGAAIAAAAAAAMAAAAHAAIAAAAAAAMAAAAHAAMAAAAAAAMAAAAHAAQAAAAAAAMAAAAHAAUAAAAAAAMAAAAHAAYAAAAAAAMAAAAHAAcAAAAAAAMAAAAHAAgAAAAAAAMAAAAHAAkAAAAAAAMAAAAHAAoAAAAAAAMAAAAHAAsAAAAAAAMAAAAHAAwAAAAAAAMAAAAHAA0AAAAAAAMAAAAHAA4AAAAAAAMAAAAHAA8AAAAAAAMAAAAHABAAAAAAAAMAAAAHABEAAAAAAAMAAAAHABIAAAAAAAMAAAAHABMAAAAAAAMAAAAIABMAAAAAAAMAAAAIABIAAAAAAAMAAAAIABEAAAAAAAMAAAAIABAAAAAAAAMAAAAIAA8AAAAAAAMAAAAIAA4AAAAAAAMAAAAIAA0AAAAAAAMAAAAIAAwAAAAAAAMAAAAIAAsAAAAAAAMAAAAIAAoAAAAAAAMAAAAIAAkAAAAAAAMAAAAIAAgAAAAAAAMAAAAIAAcAAAAAAAMAAAAIAAYAAAAAAAMAAAAIAAUAAAAAAAMAAAAIAAQAAAAAAAMAAAAIAAMAAAAAAAMAAAAIAAIAAAAAAAMAAAAJAAIAAAAAAAMAAAAJAAMAAAAAAAMAAAAJAAQAAAAAAAMAAAAJAAUAAAAAAAMAAAAJAAYAAAAAAAMAAAAJAAcAAAAAAAMAAAAJAAgAAAAAAAMAAAAJAAkAAAAAAAMAAAAJAAoAAAAAAAMAAAAJAAsAAAAAAAMAAAAJAAwAAAAAAAMAAAAJAA0AAAAAAAMAAAAJAA4AAAAAAAMAAAAJAA8AAAAAAAMAAAAJABAAAAAAAAMAAAAJABEAAAAAAAMAAAAJABIAAAAAAAMAAAAJABMAAAAAAAMAAAAKABMAAAAAAAMAAAAKABIAAAAAAAMAAAAKABEAAAAAAAMAAAAKABAAAAAAAAMAAAAKAA8AAAAAAAMAAAAKAA4AAAAAAAMAAAAKAA0AAAAAAAMAAAAKAAwAAAAAAAMAAAAKAAsAAAAAAAMAAAAKAAoAAAAAAAMAAAAKAAkAAAAAAAMAAAAKAAgAAAAAAAMAAAAKAAcAAAAAAAMAAAAKAAYAAAAAAAMAAAAKAAUAAAAAAAMAAAAKAAQAAAAAAAMAAAAKAAMAAAAAAAMAAAAKAAIAAAAAAAMAAAALAAIAAAAAAAMAAAALAAMAAAAAAAMAAAALAAQAAAAAAAMAAAALAAUAAAAAAAMAAAALAAYAAAAAAAMAAAALAAcAAAAAAAMAAAALAAgAAAAAAAMAAAALAAkAAAAAAAMAAAALAAoAAAAAAAMAAAALAAsAAAAAAAMAAAALAAwAAAAAAAMAAAALAA0AAAAAAAMAAAALAA4AAAAAAAMAAAALAA8AAAAAAAMAAAALABAAAAAAAAMAAAALABEAAAAAAAMAAAALABIAAAAAAAMAAAALABMAAAAAAAMAAAAMABMAAAAAAAMAAAAMABIAAAAAAAMAAAAMABEAAAAAAAMAAAAMABAAAAAAAAMAAAAMAA8AAAAAAAMAAAAMAA4AAAAAAAMAAAAMAA0AAAAAAAMAAAANAA0AAAAAAAMAAAANAAwAAAAAAAMAAAANAAsAAAAAAAMAAAANAAoAAAAAAAMAAAANAAkAAAAAAAMAAAANAAgAAAAAAAMAAAANAAcAAAAAAAMAAAANAAYAAAAAAAMAAAANAAUAAAAAAAMAAAANAAQAAAAAAAMAAAANAAMAAAAAAAMAAAANAAIAAAAAAAMAAAANAAEAAAAAAAMAAAAOAAEAAAAAAAMAAAAOAAIAAAAAAAMAAAAOAAMAAAAAAAMAAAAOAAQAAAAAAAMAAAAOAAUAAAAAAAMAAAAOAAYAAAAAAAMAAAAOAAcAAAAAAAMAAAAOAAgAAAAAAAMAAAAOAAkAAAAAAAMAAAAOAAoAAAAAAAMAAAAOAAsAAAAAAAMAAAAOAAwAAAAAAAMAAAAOAA0AAAAAAAMAAAAOAA4AAAAAAAMAAAANAA4AAAAAAAMAAAANAA8AAAAAAAMAAAANABAAAAAAAAMAAAANABEAAAAAAAMAAAANABIAAAAAAAMAAAANABMAAAAAAAMAAAAOABMAAAAAAAMAAAAOABIAAAAAAAMAAAAOABEAAAAAAAMAAAAOABAAAAAAAAMAAAAOAA8AAAAAAAMAAAAPAA8AAAAAAAMAAAAPAA4AAAAAAAMAAAAPAA0AAAAAAAMAAAAPAAwAAAAAAAMAAAAPAAsAAAAAAAMAAAAPAAoAAAAAAAMAAAAPAAkAAAAAAAMAAAAPAAgAAAAAAAMAAAAPAAcAAAAAAAMAAAAPAAYAAAAAAAMAAAAPAAUAAAAAAAMAAAAPAAQAAAAAAAMAAAAPAAMAAAAAAAMAAAAPAAIAAAAAAAMAAAAPAAEAAAAAAAMAAAAQAAEAAAAAAAMAAAAQAAIAAAAAAAMAAAAQAAMAAAAAAAMAAAAQAAQAAAAAAAMAAAAQAAUAAAAAAAMAAAAQAAYAAAAAAAMAAAAQAAcAAAAAAAMAAAAQAAgAAAAAAAMAAAAQAAkAAAAAAAMAAAAQAAoAAAAAAAMAAAAQAAsAAAAAAAMAAAAQAAwAAAAAAAMAAAAQAA0AAAAAAAMAAAAQAA4AAAAAAAMAAAAQAA8AAAAAAAMAAAAQABAAAAAAAAMAAAAPABAAAAAAAAMAAAAPABEAAAAAAAMAAAAPABIAAAAAAAMAAAAPABMAAAAAAAMAAAAQABMAAAAAAAMAAAAQABIAAAAAAAMAAAAQABEAAAAAAAMAAAARABEAAAAAAAMAAAARABAAAAAAAAMAAAARAA8AAAAAAAMAAAARAA4AAAAAAAMAAAARAA0AAAAAAAMAAAARAAwAAAAAAAMAAAARAAsAAAAAAAMAAAARAAoAAAAAAAMAAAARAAkAAAAAAAMAAAARAAgAAAAAAAMAAAARAAcAAAAAAAMAAAARAAYAAAAAAAMAAAARAAUAAAAAAAMAAAARAAQAAAAAAAMAAAARAAMAAAAAAAMAAAARAAIAAAAAAAMAAAARAAEAAAAAAAMAAAASAAEAAAAAAAMAAAASAAIAAAAAAAMAAAASAAMAAAAAAAMAAAASAAQAAAAAAAMAAAASAAUAAAAAAAMAAAASAAYAAAAAAAMAAAASAAcAAAAAAAMAAAASAAgAAAAAAAMAAAASAAkAAAAAAAMAAAASAAoAAAAAAAMAAAASAAsAAAAAAAMAAAASAAwAAAAAAAMAAAASAA0AAAAAAAMAAAASAA4AAAAAAAMAAAASAA8AAAAAAAMAAAASABAAAAAAAAMAAAASABEAAAAAAAMAAAASABIAAAAAAAMAAAARABIAAAAAAAMAAAARABMAAAAAAAMAAAASABMAAAAAAAMAAAATABMAAAAAAAMAAAATABIAAAAAAAMAAAATABEAAAAAAAMAAAATABAAAAAAAAMAAAATAA8AAAAAAAMAAAATAA4AAAAAAAMAAAATAA0AAAAAAAMAAAATAAwAAAAAAAMAAAATAAsAAAAAAAMAAAATAAoAAAAAAAMAAAATAAkAAAAAAAMAAAATAAgAAAAAAAMAAAATAAcAAAAAAAMAAAATAAYAAAAAAAMAAAATAAUAAAAAAAMAAAATAAQAAAAAAAMAAAATAAMAAAAAAAMAAAATAAIAAAAAAAMAAAATAAEAAAAAAAMAAAAUAAEAAAAAAAMAAAAUAAIAAAAAAAMAAAAUAAMAAAAAAAMAAAAUAAQAAAAAAAMAAAAUAAUAAAAAAAMAAAAUAAYAAAAAAAMAAAAUAAcAAAAAAAMAAAAUAAgAAAAAAAMAAAAUAAkAAAAAAAMAAAAUAAoAAAAAAAMAAAAUAAsAAAAAAAMAAAAUAAwAAAAAAAMAAAAUAA0AAAAAAAMAAAAUAA4AAAAAAAMAAAAUAA8AAAAAAAMAAAAUABAAAAAAAAMAAAAUABEAAAAAAAMAAAAUABIAAAAAAAMAAAAUABMAAAAAAAMAAAAVABMAAAAAAAMAAAAVABIAAAAAAAMAAAAVABEAAAAAAAMAAAAVABAAAAAAAAMAAAAVAA8AAAAAAAMAAAAVAA4AAAAAAAMAAAAVAA0AAAAAAAMAAAAVAAwAAAAAAAMAAAAVAAsAAAAAAAMAAAAVAAoAAAAAAAMAAAAVAAkAAAAAAAMAAAAVAAgAAAAAAAMAAAAVAAcAAAAAAAMAAAAVAAYAAAAAAAMAAAAVAAUAAAAAAAMAAAAVAAQAAAAAAAMAAAAVAAMAAAAAAAMAAAAVAAIAAAAAAAMAAAAVAAEAAAAAAAMAAAAWAAEAAAAAAAMAAAAWAAIAAAAAAAMAAAAWAAMAAAAAAAMAAAAWAAQAAAAAAAMAAAAWAAUAAAAAAAMAAAAWAAYAAAAAAAMAAAAWAAcAAAAAAAMAAAAWAAgAAAAAAAMAAAAWAAkAAAAAAAMAAAAWAAoAAAAAAAMAAAAWAAsAAAAAAAMAAAAWAAwAAAAAAAMAAAAWAA0AAAAAAAMAAAAWAA4AAAAAAAMAAAAWAA8AAAAAAAMAAAAWABAAAAAAAAMAAAAWABEAAAAAAAMAAAAWABIAAAAAAAMAAAAWABMAAAAAAAMAAAAXABMAAAAAAAMAAAAXABIAAAAAAAMAAAAXABEAAAAAAAMAAAAXABAAAAAAAAMAAAAXAA8AAAAAAAMAAAAXAA4AAAAAAAMAAAAXAA0AAAAAAAMAAAAXAAwAAAAAAAMAAAAXAAsAAAAAAAMAAAAXAAoAAAAAAAMAAAAXAAkAAAAAAAMAAAAXAAgAAAAAAAMAAAAXAAcAAAAAAAMAAAAXAAYAAAAAAAMAAAAXAAUAAAAAAAMAAAAXAAQAAAAAAAMAAAAXAAMAAAAAAAMAAAAXAAIAAAAAAAMAAAAXAAEAAAAAAAMAAAAYAAEAAAAAAAMAAAAYAAIAAAAAAAMAAAAYAAMAAAAAAAMAAAAYAAQAAAAAAAMAAAAYAAUAAAAAAAMAAAAYAAYAAAAAAAMAAAAYAAcAAAAAAAMAAAAYAAgAAAAAAAMAAAAYAAkAAAAAAAMAAAAYAAoAAAAAAAMAAAAYAAsAAAAAAAMAAAAYAAwAAAAAAAMAAAAYAA0AAAAAAAMAAAAYAA4AAAAAAAMAAAAYAA8AAAAAAAMAAAAYABAAAAAAAAMAAAAYABEAAAAAAAMAAAAYABIAAAAAAAMAAAAYABMAAAAAAAMAAAAZABMAAAAAAAMAAAAZABIAAAAAAAMAAAAZABEAAAAAAAMAAAAZABAAAAAAAAMAAAAZAA8AAAAAAAMAAAAZAA4AAAAAAAMAAAAZAA0AAAAAAAMAAAAZAAwAAAAAAAMAAAAZAAsAAAAAAAMAAAAZAAoAAAAAAAMAAAAZAAkAAAAAAAMAAAAZAAgAAAAAAAMAAAAZAAcAAAAAAAMAAAAZAAYAAAAAAAMAAAAZAAUAAAAAAAMAAAAZAAQAAAAAAAMAAAAZAAMAAAAAAAMAAAAZAAIAAAAAAAMAAAAZAAEAAAAAAAMAAAAaAAEAAAAAAAMAAAAaAAIAAAAAAAMAAAAaAAMAAAAAAAMAAAAaAAQAAAAAAAMAAAAaAAUAAAAAAAMAAAAaAAYAAAAAAAMAAAAaAAcAAAAAAAMAAAAaAAgAAAAAAAMAAAAaAAkAAAAAAAMAAAAaAAoAAAAAAAMAAAAaAAsAAAAAAAMAAAAaAAwAAAAAAAMAAAAaAA0AAAAAAAMAAAAaAA4AAAAAAAMAAAAaAA8AAAAAAAMAAAAaABAAAAAAAAMAAAAaABEAAAAAAAMAAAAaABIAAAAAAAMAAAAaABMAAAAAAAMAAAAbABMAAAAAAAMAAAAbABIAAAAAAAMAAAAbABEAAAAAAAMAAAAbABAAAAAAAAMAAAAbAA8AAAAAAAMAAAAbAA4AAAAAAAMAAAAbAA0AAAAAAAMAAAAbAAwAAAAAAAMAAAAbAAsAAAAAAAMAAAAbAAoAAAAAAAMAAAAbAAkAAAAAAAMAAAAbAAgAAAAAAAMAAAAbAAcAAAAAAAMAAAAbAAYAAAAAAAMAAAAbAAUAAAAAAAMAAAAbAAQAAAAAAAMAAAAbAAMAAAAAAAMAAAAbAAIAAAAAAAMAAAAbAAEAAAAAAAMAAAAcAAEAAAAAAAMAAAAcAAIAAAAAAAMAAAAcAAMAAAAAAAMAAAAcAAQAAAAAAAMAAAAcAAUAAAAAAAMAAAAcAAYAAAAAAAMAAAAcAAcAAAAAAAMAAAAcAAgAAAAAAAMAAAAcAAkAAAAAAAMAAAAcAAoAAAAAAAMAAAAcAAsAAAAAAAMAAAAcAAwAAAAAAAMAAAAcAA0AAAAAAAMAAAAcAA4AAAAAAAMAAAAcAA8AAAAAAAMAAAAcABAAAAAAAAMAAAAcABEAAAAAAAMAAAAcABIAAAAAAAMAAAAcABMAAAAAAAMAAAAdABMAAAAAAAMAAAAdABIAAAAAAAMAAAAdABEAAAAAAAMAAAAdABAAAAAAAAMAAAAdAA8AAAAAAAMAAAAdAA4AAAAAAAMAAAAdAA0AAAAAAAMAAAAdAAwAAAAAAAMAAAAdAAsAAAAAAAMAAAAdAAoAAAAAAAMAAAAdAAkAAAAAAAMAAAAdAAgAAAAAAAMAAAAdAAcAAAAAAAMAAAAdAAYAAAAAAAMAAAAdAAUAAAAAAAMAAAAdAAQAAAAAAAMAAAAdAAMAAAAAAAMAAAAdAAIAAAAAAAMAAAAdAAEAAAAAAAMAAAAeAAEAAAAAAAMAAAAeAAIAAAAAAAMAAAAeAAMAAAAAAAMAAAAeAAQAAAAAAAMAAAAeAAUAAAAAAAMAAAAeAAYAAAAAAAMAAAAeAAcAAAAAAAMAAAAeAAgAAAAAAAMAAAAeAAkAAAAAAAMAAAAeAAoAAAAAAAMAAAAeAAsAAAAAAAMAAAAeAAwAAAAAAAMAAAAeAA0AAAAAAAMAAAAeAA4AAAAAAAMAAAAeAA8AAAAAAAMAAAAeABAAAAAAAAMAAAAeABEAAAAAAAMAAAAeABIAAAAAAAMAAAAeABMAAAAAAAMAAAAfABMAAAAAAAMAAAAfABIAAAAAAAMAAAAfABEAAAAAAAMAAAAfABAAAAAAAAMAAAAfAA8AAAAAAAMAAAAfAA4AAAAAAAMAAAAfAA0AAAAAAAMAAAAfAAwAAAAAAAMAAAAfAAsAAAAAAAMAAAAfAAoAAAAAAAMAAAAfAAkAAAAAAAMAAAAfAAgAAAAAAAMAAAAfAAcAAAAAAAMAAAAfAAYAAAAAAAMAAAAfAAUAAAAAAAMAAAAfAAQAAAAAAAMAAAAfAAMAAAAAAAMAAAAfAAIAAAAAAAMAAAAfAAEAAAAAAAMAAAAgAAEAAAAAAAMAAAAgAAIAAAAAAAMAAAAgAAMAAAAAAAMAAAAgAAQAAAAAAAMAAAAgAAUAAAAAAAMAAAAgAAYAAAAAAAMAAAAgAAcAAAAAAAMAAAAgAAgAAAAAAAMAAAAgAAkAAAAAAAMAAAAgAAoAAAAAAAMAAAAgAAsAAAAAAAMAAAAgAAwAAAAAAAMAAAAgAA0AAAAAAAMAAAAgAA4AAAAAAAMAAAAgAA8AAAAAAAMAAAAgABAAAAAAAAMAAAAgABEAAAAAAAMAAAAgABIAAAAAAAMAAAAgABMAAAAAAAMAAAAhABMAAAAAAAMAAAAhABIAAAAAAAMAAAAhABEAAAAAAAMAAAAhABAAAAAAAAMAAAAhAA8AAAAAAAMAAAAhAA4AAAAAAAMAAAAhAA0AAAAAAAMAAAAhAAwAAAAAAAMAAAAhAAsAAAAAAAMAAAAhAAoAAAAAAAMAAAAhAAkAAAAAAAMAAAAhAAgAAAAAAAMAAAAhAAcAAAAAAAMAAAAhAAYAAAAAAAMAAAAhAAUAAAAAAAMAAAAhAAQAAAAAAAMAAAAhAAMAAAAAAAMAAAAhAAIAAAAAAAMAAAAhAAEAAAAAAAMAAAAiAAEAAAAAAAMAAAAiAAIAAAAAAAMAAAAiAAMAAAAAAAMAAAAiAAQAAAAAAAMAAAAiAAUAAAAAAAMAAAAiAAYAAAAAAAMAAAAiAAcAAAAAAAMAAAAiAAgAAAAAAAMAAAAiAAkAAAAAAAMAAAAiAAoAAAAAAAMAAAAiAAsAAAAAAAMAAAAiAAwAAAAAAAMAAAAiAA0AAAAAAAMAAAAiAA4AAAAAAAMAAAAiAA8AAAAAAAMAAAAiABAAAAAAAAMAAAAiABEAAAAAAAMAAAAiABIAAAAAAAMAAAAiABMAAAAAAAMAAAA=")
tile_set = ExtResource("1_g236m")

[node name="Boarder" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAfAAAAAAAAAAAAAAAeAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAATAAAAAAAAAAAAAAASAAAAAAAAAAAAAAARAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAAAABIAAAAAAAAAAAAAABMAAAAAAAAAAAAAABQAAAAAAAAAAAABABQAAAAAAAAAAAACABQAAAAAAAAAAAADABQAAAAAAAAAAAAEABQAAAAAAAAAAAAFABQAAAAAAAAAAAAGABQAAAAAAAAAAAAHABQAAAAAAAAAAAAIABQAAAAAAAAAAAAJABQAAAAAAAAAAAAKABQAAAAAAAAAAAALABQAAAAAAAAAAAAMABQAAAAAAAAAAAANABQAAAAAAAAAAAAOABQAAAAAAAAAAAAPABQAAAAAAAAAAAAQABQAAAAAAAAAAAARABQAAAAAAAAAAAASABQAAAAAAAAAAAATABQAAAAAAAAAAAAUABQAAAAAAAAAAAAVABQAAAAAAAAAAAAWABQAAAAAAAAAAAAXABQAAAAAAAAAAAAYABQAAAAAAAAAAAAZABQAAAAAAAAAAAAaABQAAAAAAAAAAAAbABQAAAAAAAAAAAAcABQAAAAAAAAAAAAdABQAAAAAAAAAAAAeABQAAAAAAAAAAAAfABQAAAAAAAAAAAAgABQAAAAAAAAAAAAhABQAAAAAAAAAAAAiABQAAAAAAAAAAAAjABQAAAAAAAAAAAAjABMAAAAAAAAAAAAjABIAAAAAAAAAAAAjABEAAAAAAAAAAAAjABAAAAAAAAAAAAAjAA8AAAAAAAAAAAAjAA4AAAAAAAAAAAAjAA0AAAAAAAAAAAAjAAwAAAAAAAAAAAAjAAsAAAAAAAAAAAAjAAoAAAAAAAAAAAAjAAkAAAAAAAAAAAAjAAgAAAAAAAAAAAAjAAcAAAAAAAAAAAAjAAYAAAAAAAAAAAAjAAUAAAAAAAAAAAAjAAQAAAAAAAAAAAAjAAMAAAAAAAAAAAAjAAIAAAAAAAAAAAAjAAEAAAAAAAAAAAABABMAAAAAAAAAAAACABMAAAAAAAAAAAADABMAAAAAAAAAAAAEABMAAAAAAAAAAAAFABMAAAAAAAAAAAAGABMAAAAAAAAAAAAHABMAAAAAAAAAAAAIABMAAAAAAAAAAAAJABMAAAAAAAAAAAAKABMAAAAAAAAAAAALABMAAAAAAAAAAAAMABMAAAAAAAAAAAANABMAAAAAAAAAAAAOABMAAAAAAAAAAAAPABMAAAAAAAAAAAAQABMAAAAAAAAAAAARABMAAAAAAAAAAAASABMAAAAAAAAAAAATABMAAAAAAAAAAAAUABMAAAAAAAAAAAAVABMAAAAAAAAAAAAWABMAAAAAAAAAAAAXABMAAAAAAAAAAAAYABMAAAAAAAAAAAAZABMAAAAAAAAAAAAaABMAAAAAAAAAAAAbABMAAAAAAAAAAAAcABMAAAAAAAAAAAAdABMAAAAAAAAAAAAeABMAAAAAAAAAAAAfABMAAAAAAAAAAAAgABMAAAAAAAAAAAAhABMAAAAAAAAAAAAiABMAAAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAD//xAAAAAAAAAAAAD//xEAAAAAAAAAAAD//xIAAAAAAAAAAAD//xMAAAAAAAAAAAD//xQAAAAAAAAAAAD//xUAAAAAAAAAAAAkABUAAAAAAAAAAAAjABUAAAAAAAAAAAAiABUAAAAAAAAAAAAhABUAAAAAAAAAAAAgABUAAAAAAAAAAAAfABUAAAAAAAAAAAAeABUAAAAAAAAAAAAdABUAAAAAAAAAAAAcABUAAAAAAAAAAAAbABUAAAAAAAAAAAAaABUAAAAAAAAAAAAZABUAAAAAAAAAAAAYABUAAAAAAAAAAAAXABUAAAAAAAAAAAAWABUAAAAAAAAAAAAVABUAAAAAAAAAAAAUABUAAAAAAAAAAAATABUAAAAAAAAAAAASABUAAAAAAAAAAAARABUAAAAAAAAAAAAQABUAAAAAAAAAAAAPABUAAAAAAAAAAAAOABUAAAAAAAAAAAANABUAAAAAAAAAAAAMABUAAAAAAAAAAAALABUAAAAAAAAAAAAKABUAAAAAAAAAAAAJABUAAAAAAAAAAAAIABUAAAAAAAAAAAAHABUAAAAAAAAAAAAGABUAAAAAAAAAAAAFABUAAAAAAAAAAAAEABUAAAAAAAAAAAADABUAAAAAAAAAAAACABUAAAAAAAAAAAABABUAAAAAAAAAAAAAABUAAAAAAAAAAAAkABQAAAAAAAAAAAAkABMAAAAAAAAAAAAkABIAAAAAAAAAAAAkABEAAAAAAAAAAAAkABAAAAAAAAAAAAAkAA8AAAAAAAAAAAAkAA4AAAAAAAAAAAAkAA0AAAAAAAAAAAAkAAwAAAAAAAAAAAAkAAsAAAAAAAAAAAAkAAoAAAAAAAAAAAAkAAkAAAAAAAAAAAAkAAgAAAAAAAAAAAAkAAcAAAAAAAAAAAAkAAYAAAAAAAAAAAAkAAUAAAAAAAAAAAAkAAQAAAAAAAAAAAAkAAMAAAAAAAAAAAAkAAIAAAAAAAAAAAAkAAEAAAAAAAAAAAAkAAAAAAAAAAAAAAAkAP//AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAAAAAAAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAA=")
tile_set = ExtResource("1_g236m")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_3h1cu")
horizontal_alignment = 1

[node name="MuteSFXButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ityvj")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_ucw1g")
text = "mute sound effects"
flat = true

[node name="MuteMusicButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ityvj")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_ucw1g")
text = "mute music"
flat = true

[node name="SecretSettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ityvj")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_ucw1g")
text = "secret settings"
flat = true

[node name="UsernameBox" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ityvj")
theme_override_font_sizes/font_size = 48
placeholder_text = "<username>"
alignment = 1

[node name="PasswordBox" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ityvj")
theme_override_font_sizes/font_size = 48
placeholder_text = "<password>"
alignment = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 49.0
offset_top = 52.0
offset_right = 141.0
offset_bottom = 102.0
focus_mode = 0
theme = ExtResource("4_558x5")
theme_override_colors/font_hover_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BACK"
flat = true

[node name="Credit" type="Label" parent="."]
offset_left = 784.0
offset_top = 576.0
offset_right = 1112.0
offset_bottom = 604.0
theme = ExtResource("4_558x5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Created by @QuietLantern"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/SecretSettingsButton" to="." method="_on_secret_settings_button_pressed"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/UsernameBox" to="." method="_on_username_box_text_submitted"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/PasswordBox" to="." method="_on_password_box_text_submitted"]
[connection signal="pressed" from="BackButton" to="." method="_on_button_pressed"]
